# rust-react-compiler

./: .gitignore  AGENT-STATE.md  AGENT-WORKSPACE.md  AGENTS.md  CLAUDE.md  PAIR-CODER.md  README.md  dump_ts_hir.js  monitor.sh  stats-loop.sh
rust-react-compiler/: AGENT-STATE.md  Cargo.toml
rust-react-compiler/examples/: analyze2.rs  analyze_mismatches.rs  analyze_passthrough.rs  analyze_passthrough2.rs  body_diff_detail.rs  check_lost.rs  check_normalize.rs  check_specific.rs  closest_fixtures.rs  code_diff_analysis.rs  compare_fixtures.rs  const_let.rs  const_let_analysis.rs  deep_analysis.rs  diff_fixtures.rs  dollar_t_check.rs  final_analysis.rs  missing_memo.rs  near_miss.rs  passthrough_check.rs  pattern_analysis.rs  same_slots_analysis.rs  show_diff.rs  show_passthrough.rs  show_raw.rs  show_specific.rs  slot_diff_detail.rs  test_cb.rs  token_diff.rs  var_placement.rs
rust-react-compiler/scripts/: push-status.sh
rust-react-compiler/src/: error.rs  lib.rs  main.rs
rust-react-compiler/src/codegen/: hir_codegen.rs  mod.rs
rust-react-compiler/src/entrypoint/: mod.rs  options.rs  pipeline.rs
rust-react-compiler/src/hir/: build_hir.rs  environment.rs  hir.rs  mod.rs  print_hir.rs  types.rs  visitors.rs
rust-react-compiler/src/inference/: aliasing_effects.rs  analyse_functions.rs  drop_manual_memoization.rs  infer_mutation_aliasing_effects.rs  infer_mutation_aliasing_ranges.rs  infer_reactive_places.rs  inline_iife.rs  mod.rs
rust-react-compiler/src/optimization/: constant_propagation.rs  dead_code_elimination.rs  (+6 more)
rust-react-compiler/tests/: fixtures.rs
(+59 files in other folders)
