[package]
name = "react-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "react-compiler"
path = "src/main.rs"

[lib]
name = "react_compiler"
path = "src/lib.rs"

[dependencies]
oxc_parser      = "0.69"
oxc_ast         = "0.69"
oxc_semantic    = "0.69"
oxc_span        = "0.69"
oxc_diagnostics = "0.69"
oxc_allocator   = "0.69"
oxc_codegen     = "0.69"
oxc_index       = "3"
petgraph        = "0.6"
indexmap        = { version = "2", features = ["serde"] }
rustc-hash      = "2"
smallvec        = { version = "1", features = ["union"] }
thiserror       = "2"
miette          = { version = "7", features = ["fancy"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
bitflags        = "2"
once_cell       = "1"

[dev-dependencies]
insta = "1"
glob  = "0.3"
